
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;


 int seed_from_timestamp_and_pid (int*) ;
 scalar_t__ seed_from_urandom (int*) ;
 scalar_t__ seed_from_windows_cryptoapi (int*) ;

__attribute__((used)) static uint32_t generate_seed() {
    uint32_t seed;
    int done = 0;
    if (!done) {


        seed_from_timestamp_and_pid(&seed);
    }


    if (seed == 0)
        seed = 1;

    return seed;
}
